--- a/src/vistas/VizualizacionDatos.fxml
+++ b/src/vistas/VizualizacionDatos.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -10,7 +11,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="1012.0" style="-fx-background-color: #00000000;" stylesheets="@../utilerias/general/Estilo.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vistas.VizualizacionDatosController">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="1012.0" stylesheets="@../utilerias/general/Estilo.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vistas.VizualizacionDatosController">
    <children>
       <HBox prefHeight="42.0" prefWidth="1012.0" styleClass="hbox">
          <children>
@@ -21,16 +22,6 @@
          </children>
       </HBox>
       <Button fx:id="botonExportar" layoutX="903.0" layoutY="519.0" mnemonicParsing="false" onAction="#Exportar" prefHeight="38.0" prefWidth="97.0" styleClass="button-azul" text="Exportar" textFill="#ecf2e9" />
-      <ImageView fitHeight="86.0" fitWidth="200.0" layoutX="14.0" layoutY="52.0">
-         <image>
-            <Image url="@../utilerias/visualizacionDatos/logoTecno.png" />
-         </image>
-      </ImageView>
-      <ImageView layoutX="903.0" layoutY="44.0">
-         <image>
-            <Image url="@../utilerias/visualizacionDatos/logoITZ.png" />
-         </image>
-      </ImageView>
       <Button fx:id="botonActualizar" layoutX="38.0" layoutY="520.0" mnemonicParsing="false" onAction="#actuzalizar" style="-fx-background-color: #00000000;" styleClass="label-vinculo" text="¿SE ACTUALIZARON DOCUMENTOS?" textFill="#4242b4" underline="true">
          <cursor>
             <Cursor fx:constant="HAND" />
@@ -41,9 +32,9 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
-      <Button fx:id="botonGuardar" layoutX="775.0" layoutY="519.0" mnemonicParsing="false" onAction="#guardar" prefHeight="38.0" prefWidth="98.0" styleClass="button-azul" text="Guardar" />
-      <TextField fx:id="campoBusqueda" layoutX="313.0" layoutY="89.0" prefHeight="32.0" prefWidth="400.0" styleClass="text-field" AnchorPane.leftAnchor="300.0" AnchorPane.rightAnchor="300.0" />
-      <ImageView layoutX="690.0" layoutY="95.0">
+      <Button fx:id="botonGuardar" layoutX="584.0" layoutY="521.0" mnemonicParsing="false" onAction="#guardar" prefHeight="38.0" prefWidth="98.0" styleClass="button-azul" text="Guardar" />
+      <TextField fx:id="campoBusqueda" layoutX="300.0" layoutY="101.0" prefHeight="32.0" prefWidth="400.0" styleClass="text-field" AnchorPane.leftAnchor="300.0" AnchorPane.rightAnchor="300.0" />
+      <ImageView layoutX="690.0" layoutY="105.0">
          <image>
             <Image url="@../utilerias/visualizacionDatos/logoLupa.png" />
          </image>
@@ -54,5 +45,7 @@
             <Image url="@../utilerias/visualizacionDatos/logoInterrogacion.png" />
          </image>
       </ImageView>
+      <Label layoutX="116.0" layoutY="28.0" prefHeight="67.0" prefWidth="848.0" styleClass="title" text="Visualizacion y acreitacion docente" textFill="#4242b4" />
+      <Label layoutX="722.0" layoutY="529.0" text="Exportar listas de Asistencia:" />
    </children>
 </AnchorPane>
