--- a/src/vistas/Principal.fxml
+++ b/src/vistas/Principal.fxml
@@ -38,7 +38,7 @@
                 <Label alignment="CENTER" layoutX="-1.0" layoutY="90.0" prefHeight="21.0" prefWidth="145.0" styleClass="label-principal" text="Importación de archivos" textAlignment="CENTER" wrapText="true" />
             </children>
         </Pane>
-        <Pane fx:id="botonVisualizacion" layoutX="190.0" layoutY="290.0" prefHeight="140.0" prefWidth="140.0" styleClass="card">
+        <Pane fx:id="botonVisualizacion" layoutX="352.0" layoutY="290.0" prefHeight="140.0" prefWidth="140.0" styleClass="card">
             <children>
                 <ImageView fitHeight="68.0" fitWidth="76.0" layoutX="30.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
                     <image>
@@ -52,21 +52,21 @@
                 </Label>
             </children>
         </Pane>
-        <Pane fx:id="botonBusqueda" layoutX="356.0" layoutY="290.0" prefHeight="140.0" prefWidth="140.0" styleClass="card">
+        <Pane fx:id="botonBusqueda" layoutX="520.0" layoutY="290.0" prefHeight="140.0" prefWidth="140.0" styleClass="card">
             <children>
                 <ImageView fitHeight="68.0" fitWidth="76.0" layoutX="30.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
                     <image>
                         <Image url="@../utilerias/principal/logoBusqueda.png" />
                     </image>
                 </ImageView>
-                <Label alignment="CENTER" layoutX="1.0" layoutY="90.0" prefHeight="15.0" prefWidth="138.0" styleClass="label-principal" text="Busqueda y  estadisticas">
+                <Label alignment="CENTER" layoutX="1.0" layoutY="90.0" prefHeight="15.0" prefWidth="138.0" styleClass="label-principal" text="Búsqueda y  estadísticas">
                     <font>
                         <Font size="10.0" />
                     </font>
                 </Label>
             </children>
         </Pane>
-        <Pane fx:id="botonModificacion" layoutX="524.0" layoutY="290.0" prefHeight="140.0" prefWidth="140.0" styleClass="card">
+        <Pane fx:id="botonModificacion" layoutX="185.0" layoutY="290.0" prefHeight="140.0" prefWidth="140.0" styleClass="card">
             <children>
                 <ImageView fitHeight="68.0" fitWidth="76.0" layoutX="35.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
                     <image>
