--- a/src/vistas/InicioSesion.fxml
+++ b/src/vistas/InicioSesion.fxml
@@ -65,7 +65,7 @@
                 </Pane>
                 <Pane layoutX="60.0" layoutY="158.0" prefHeight="30.0" prefWidth="231.0" styleClass="username-field">
                     <children>
-                        <Label layoutX="42.0" layoutY="6.0" style="-fx-font-size: 12; -fx-font-weight: bold;" text="dda.zacatepec@tecnm.mx" />
+                        <Label layoutX="42.0" layoutY="6.0" style="-fx-font-size: 12; -fx-font-weight: bold;" text="dda_zacatepec@tecnm.mx" />
                     </children>
                 </Pane>
                 <Label layoutX="67.0" layoutY="28.0" style="-fx-font-size: 20;" styleClass="title" text="Restablecer Contraseña" />
